maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:36: error: '=' expected but identifier found.
def positionSortie() x:Int,y:Int ={
                     ^JediEscaper:44: error: illegal start of simple expression
def ecrire(x:Int,y:Int,i:Int) {
^